validação e ajustes no componente "telefone"

--- a/frontend/src/app/pacientes/formulario-paciente/telefone/telefone.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/telefone/telefone.component.html
@@ -9,7 +9,7 @@
             type="text"
             placeholder="(__)"
             formControlName="DDD"
-            pTooltip="Informe o DDD"
+            pTooltip="Informe o DDD."
             tooltipPosition="top"
           ></p-inputMask>
           <label>DDD</label>
@@ -23,10 +23,10 @@
             mask="9 9999-9999"
             type="text"
             formControlName="telefone"
-            pTooltip="Informe o telefone"
+            pTooltip="Informe o telefone."
             tooltipPosition="top"
           ></p-inputMask>
-          <label>telefone</label>
+          <label>Telefone</label>
         </span>
       </div>
       <div class="ui-g-3">
@@ -34,10 +34,10 @@
           <p-dropdown
             [options]="cities1"
             formControlName="tipo"
-            pTooltip="Informe o tipo de telefone"
+            pTooltip="Informe o tipo de telefone."
             tooltipPosition="top"
           ></p-dropdown>
-          <label>tipo de telefone</label>
+          <label>Tipo de telefone</label>
         </span>
       </div>
       <div class="ui-g-3">
@@ -46,10 +46,10 @@
             pInputText
             type="text"
             formControlName="observacao"
-            pTooltip="Informe o observação"
+            pTooltip="Informe o observação."
             tooltipPosition="top"
           />
-          <label>observação</label>
+          <label>Observação</label>
         </span>
       </div>
     </div>
