Adiciona componente "observacao" no final do formulário

--- a/frontend/src/app/pacientes/formulario-paciente/formulario-cadastro.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/formulario-cadastro.component.html
@@ -1,21 +1,24 @@
 <p-fieldset legend="Dados Pessoais" [toggleable]="true">
-    <app-dados-pessoais></app-dados-pessoais>
+  <app-dados-pessoais></app-dados-pessoais>
 </p-fieldset>
 <p-fieldset legend="Contatos do Paciente" [toggleable]="true">
-    <app-telefone></app-telefone>
+  <app-telefone></app-telefone>
 </p-fieldset>
 <p-fieldset legend="Endereço" [toggleable]="true">
-    <app-endereco></app-endereco>
+  <app-endereco></app-endereco>
 </p-fieldset>
 <p-fieldset legend="Responsável" [toggleable]="true">
-    <app-responsavel></app-responsavel>
+  <app-responsavel></app-responsavel>
 </p-fieldset>
 <p-fieldset legend="Documentos" [toggleable]="true">
-    <app-documentos></app-documentos>
+  <app-documentos></app-documentos>
 </p-fieldset>
 <p-fieldset legend="Certidão" [toggleable]="true">
-    <app-certidao></app-certidao>
+  <app-certidao></app-certidao>
 </p-fieldset>
 <p-fieldset legend="Cartão SUS" [toggleable]="true">
-    <app-cartao-sus></app-cartao-sus>
+  <app-cartao-sus></app-cartao-sus>
+</p-fieldset>
+<p-fieldset legend="Observação">
+  <app-observacao></app-observacao>
 </p-fieldset>
