--- a/frontend/src/app/pacientes/formulario-paciente/cartao-sus/cartao-sus.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/cartao-sus/cartao-sus.component.html
@@ -1,59 +1,98 @@
 <form class="ui-g ui-fluid" [formGroup]="cartaoSUS">
   <div class="ui-g-12">
     <div class="ui-g-3">
-      <input type="text" pInputText placeholder="Número" formControlName="numero" />
+      <span class="ui-float-label">
+        <p-inputMask
+          pInputText
+          formControlName="numero"
+          mask="999 9999 9999 9999"
+          placeholder="____ ____ ____ ____"
+          pTooltip="Informe o número do Cartão SUS (CNS)."
+        ></p-inputMask>
+        <label>Número</label>
+      </span>
+    </div>
+    <div class="ui-g-2">
+      <span class="ui-float-label">
+        <p-dropdown
+          [options]="listaAusenciaCns"
+          pTooltip="Selecione o motivo da ausência do cartão SUS do paciente."
+          formControlName="justificativa"
+        ></p-dropdown>
+        <label>Justificativa da Ausência CNS</label>
+      </span>
+    </div>
+
+    <div class="ui-g-2">
+      <span class="ui-float-label">
+        <p-dropdown
+          [options]="listaMotivoCadastro"
+          pTooltip="Selecione o motivo do cadastro."
+          formControlName="motivoCadastro"
+        ></p-dropdown>
+        <label>Motivo Cadastro</label>
+      </span>
+    </div>
+    <div class="ui-g-2">
+      <span class="ui-float-label">
+        <p-dropdown
+          [options]="listaDocReferencia"
+          pTooltip="Selecione o Documento de Referência."
+          pInputText
+          formControlName="docReferencia"
+        ></p-dropdown>
+        <label>Doc Referência</label>
+      </span>
+    </div>
+
+    <div class="ui-g-2">
+      <span class="ui-float-label">
+        <input
+          type="text"
+          pTooltip="Informe a Portaria"
+          pInputText
+          formControlName="cartaoNacional"
+        />
+        <label>Cartão Nacional Saúde Mãe</label>
+      </span>
+    </div>
+  </div>
+  <div class="ui-g-12">
+    <div class="ui-g-4 ui-sm-12">
+      <span class="ui-float-label">
+        <p-calendar
+          [locale]="localizacao"
+          [yearRange]="yearRange"
+          dateFormat="dd/mm/yy"
+          [maxDate]="maxDate"
+          monthNavigator="true"
+          yearNavigator="true"
+          pTooltip="Informe a data de entrada no Brasil."
+          formControlName="dataDeEntrada"
+        ></p-calendar>
+        <label>Data de Entrada no Brasil</label>
+      </span>
+    </div>
+    <div class="ui-g-4 ui-sm-12">
+      <span class="ui-float-label">
+        <p-calendar
+          [locale]="localizacao"
+          [yearRange]="yearRange"
+          dateFormat="dd/mm/yy"
+          [maxDate]="maxDate"
+          monthNavigator="true"
+          yearNavigator="true"
+          pTooltip="Informe a data de Naturalização no Brasil."
+          formControlName="dataDeNaturalizacao"
+        ></p-calendar>
+        <label>Data de Naturalização</label>
+      </span>
     </div>
     <div class="ui-g-3">
-      <input
-        type="text"
-        pInputText
-        placeholder="Justificativa da Ausência CNS"
-        formControlName="justificativa"
-      />
-    </div>
-
-    <div class="ui-g-2">
-      <input
-        type="text"
-        pInputText
-        placeholder="Motivo Cadastro"
-        formControlName="motivoCadastro"
-      />
-    </div>
-
-    <div class="ui-g-2">
-      <input type="text" pInputText placeholder="Doc Referência" formControlName="docReferencia" />
-    </div>
-
-    <div class="ui-g-2">
-      <input
-        type="text"
-        pInputText
-        placeholder="Cartão Nacional Saúde Mãe"
-        formControlName="cartaoNacional"
-      />
-    </div>
-
-    <div class="ui-g-2">
-      <input
-        type="text"
-        pInputText
-        placeholder="Data de Entrada no Brasil"
-        formControlName="dataDeEntrada"
-      />
-    </div>
-
-    <div class="ui-g-2">
-      <input
-        type="text"
-        pInputText
-        placeholder="Data de Naturalização"
-        formControlName="dataDeNaturalizacao"
-      />
-    </div>
-
-    <div class="ui-g-2">
-      <input type="text" pInputText placeholder="Portaria" formControlName="portaria" />
+      <span class="ui-float-label">
+        <label>Portaria</label>
+        <input type="text" pTooltip="Informe a Portaria" pInputText formControlName="portaria" />
+      </span>
     </div>
   </div>
 </form>
