--- a/frontend/src/app/pacientes/formulario-paciente/telefone/telefone.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/telefone/telefone.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="telefone">
-  <div class="ui-g">
-    <div class="ui-g-12 ui-fluid">
-      <div class="ui-g-3">
+  <div class="ui-g ui-fluid">
+    <div class="ui-g-12">
+      <div class="ui-g-5 ui-sm-12">
         <span class="ui-float-label">
           <p-inputMask
             pInputText
@@ -10,12 +10,11 @@
             placeholder="(__)"
             formControlName="DDD"
             pTooltip="Informe o DDD."
-            tooltipPosition="top"
           ></p-inputMask>
           <label>DDD</label>
         </span>
       </div>
-      <div class="ui-g-3">
+      <div class="ui-g-5 ui-sm-12">
         <span class="ui-float-label">
           <p-inputMask
             pInputText
@@ -24,61 +23,40 @@
             type="text"
             formControlName="telefone"
             pTooltip="Informe o telefone."
-            tooltipPosition="top"
           ></p-inputMask>
           <label>Telefone</label>
         </span>
       </div>
-      <div class="ui-g-3">
+    </div>
+    <div class="ui-g-12">
+      <div class="ui-g-5 ui-sm-12">
         <span class="ui-float-label">
           <p-dropdown
             [options]="cities1"
             formControlName="tipo"
             pTooltip="Informe o tipo de telefone."
-            tooltipPosition="top"
           ></p-dropdown>
           <label>Tipo de telefone</label>
         </span>
       </div>
-      <div class="ui-g-3">
+      <div class="ui-g-5 ui-sm-12">
         <span class="ui-float-label">
           <input
             pInputText
             type="text"
             formControlName="observacao"
             pTooltip="Informe o observação."
-            tooltipPosition="top"
           />
           <label>Observação</label>
         </span>
       </div>
     </div>
     <p-button label="adicionar"></p-button>
+
+    <basis-datatable type="memory" [value]="fakeData">
+      <p-column header="tipo" field="tipoDeTelefone"></p-column>
+      <p-column header="telefone" field="telefone"></p-column>
+      <p-column header="observação" field="observacao"></p-column>
+    </basis-datatable>
   </div>
 </form>
-
-<basis-datatable
-  type="memory"
-  [value]="fakeData"
-  [disableView]="true"
-  [disableEdit]="true"
-  [disableDelete]="true"
->
-  <p-column header="tipo" field="tipoDeTelefone"></p-column>
-  <p-column header="telefone" field="telefone"></p-column>
-  <p-column header="observação" field="observacao"></p-column>
-  <p-column header="acoẽs" field="acoes">
-    <ng-template pTemplate="body">
-      <basis-datatable-button
-        icon="edit"
-        name="telefone"
-        bTooltip="Editar"
-      ></basis-datatable-button>
-      <basis-datatable-button
-        icon="trash"
-        name="telefone"
-        bTooltip="Excluir"
-      ></basis-datatable-button>
-    </ng-template>
-  </p-column>
-</basis-datatable>
