Corrige o posicionamento dos botões

--- a/frontend/src/app/pacientes/lista-de-pacientes/lista-de-pacientes.component.html
+++ b/frontend/src/app/pacientes/lista-de-pacientes/lista-de-pacientes.component.html
@@ -9,8 +9,9 @@
             <label>Nome paciente</label>
           </span>
         </div>
-        <div class="ui-g-12 ui-md-6">
-          <div class="ui-g-12 ui-md-6">
+        <div class="ui-g-12">
+          <div class="ui-g-2"></div>
+          <div class="ui-g-3">
             <button
               pButton
               type="button"
@@ -19,7 +20,7 @@
               bTooltip="Pesquisar paciente por nome."
             ></button>
           </div>
-          <div class="ui-g-12 ui-md-6">
+          <div class="ui-g-3">
             <button
               pButton
               type="button"
@@ -30,22 +31,6 @@
             ></button>
           </div>
         </div>
-
-        <!-- <button
-                pButton
-                type="button"
-                label="Pesquisar"
-                icon="ui-icon-search"
-                bTooltip="Pesquisar paciente por nome."
-              ></button>
-              <button
-                pButton
-                type="button"
-                label="Cadastrar"
-                icon="ui-icon-add"
-                routerLink="/pacientes/cadastro"
-                bTooltip="Cadastrar novo paciente."
-              ></button> -->
         <div class="ui-g-12 ui-md-3"></div>
         <basis-datatable
           type="memory"
