Atualizaçao de componente cartao SUS

--- a/frontend/src/app/pacientes/formulario-paciente/cartao-sus/cartao-sus.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/cartao-sus/cartao-sus.component.html
@@ -1,4 +1,4 @@
-<form class="ui-g ui-fluid" [formGroup]="cartaoSUS"></form>
+<form class="ui-g ui-fluid" [formGroup]="cartaoSUS">
   <div class="ui-g-12">
     <div class="ui-g-2">
       <span class="ui-float-label">
@@ -10,8 +10,7 @@
         ></p-inputMask>
         <label>Número</label>
       </span>
-
-       </div>
+    </div>
     <div class="ui-g-2">
       <span class="ui-float-label">
         <p-dropdown
